# PRooFPS-dd

./: .gitignore  HISTORY.md  README.md  THIRD-PARTY.md
PRooFPS-dd/: CMakeLists.txt  CameraHandling.cpp  CameraHandling.h  Config.cpp  Config.h  Consts.h  CustomPGE.cpp  CustomPGE.h  DeathKillEventLister.cpp  DeathKillEventLister.h  DrawableEventLister.cpp  DrawableEventLister.h  Durations.h  EventLister.cpp  EventLister.h  Explosion.cpp  Explosion.h  GUI.cpp  GUI.h  GameMode.cpp  GameMode.h  InOutSlider.cpp  InOutSlider.h  InputHandling.cpp  InputHandling.h  MapItem.cpp  MapItem.h  Mapcycle.cpp  Mapcycle.h  Maps.cpp  Maps.h  Minimap.cpp  Minimap.h  Networking.cpp  Networking.h  PRooFPS-dd-PGE.cpp  PRooFPS-dd-PGE.h  PRooFPS-dd-as-client.bat  PRooFPS-dd-as-client.sh  PRooFPS-dd-as-server.bat  (+61 more)
PRooFPS-dd/Docs/: Gravity-Physics-2.xlsx
PRooFPS-dd/LocMetrics/v0.2.5/: LocMetricsCommentWords.csv  LocMetricsFiles.csv  LocMetricsFolders.csv  LocMetricsFunctions.csv
PRooFPS-dd/OldPerfMeasurements/: eventlister-perf-test-v0.3.0-2024-nov.txt  eventlister-perf-test-v0.4.1-2024-nov.txt  eventlister-perf-test-v0.4.3-2024-dec.txt  eventlister-perf-test-v0.7.1-2026-july.txt  perf-optimization-template.txt  perf-optimization-v0.1.0-2022-dec.txt  perf-optimization-v0.1.5-2023-nov.txt  perf-optimization-v0.1.6.1-2023-dec.txt  perf-optimization-v0.2.0.0-2024-mar.txt  perf-optimization-v0.2.5.0-2024-jun.txt  perf-optimization-v0.2.6.0-2024-jul.txt  perf-optimization-v0.2.7.0-2024-aug.txt  perf-optimization-v0.2.8.0-2024-aug.txt  perf-optimization-v0.3.0-2024-sep.txt  perf-optimization-v0.4.0-2024-oct.txt  perf-optimization-v0.4.1-2024-oct.txt  perf-optimization-v0.4.2-2024-nov.txt  perf-optimization-v0.4.3-2024-dec.txt  perf-optimization-v0.5.0-2025-mar.txt  perf-optimization-v0.5.1-2025-july-mchpistol-firing-rate-new.txt  perf-optimization-v0.5.1-2025-july-mchpistol-firing-rate-old.txt  perf-optimization-v0.5.1-bvh-variation-startFromFirstNode.txt  perf-optimization-v0.5.1-bvh-variation-startFromLowest-DownFromRootNode.txt  perf-optimization-v0.5.1-bvh-variation-startFromLowest-UpFromLeafNode.txt  perf-optimization-v0.5.1-bvh-variations-template.txt  perf-optimization-v0.6.0-2025-dec.txt  perf-optimization-v0.7.1-2026-july.txt
PRooFPS-dd/OldRegTestDumps/v0.1.3/: RegTestDumpClient_tickrate_20.txt  RegTestDumpClient_tickrate_60.txt  RegTestDumpServer_tickrate_20.txt  RegTestDumpServer_tickrate_60.txt
PRooFPS-dd/OldRegTestDumps/v0.1.4/: RegTestDumpClient_tickrate_20.txt  RegTestDumpClient_tickrate_60.txt  RegTestDumpServer_tickrate_20.txt  RegTestDumpServer_tickrate_60.txt
PRooFPS-dd/OldRegTestDumps/v0.1.5/: RegTestDumpClient_tickrate_20_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpClient_tickrate_60_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpClient_tickrate_60_cl_updaterate_60_physics_rate_min_60.txt  RegTestDumpServer_tickrate_20_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpServer_tickrate_60_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpServer_tickrate_60_cl_updaterate_60_physics_rate_min_60.txt
PRooFPS-dd/OldRegTestDumps/v0.1.6/: RegTestDumpClient_tickrate_20_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpClient_tickrate_60_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpClient_tickrate_60_cl_updaterate_60_physics_rate_min_60.txt  RegTestDumpServer_tickrate_20_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpServer_tickrate_60_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpServer_tickrate_60_cl_updaterate_60_physics_rate_min_60.txt
PRooFPS-dd/OldRegTestDumps/v0.1.6.1/: RegTestDumpClient_pid_13152_tickrate_60_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpClient_pid_13964_tickrate_20_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpClient_pid_8012_tickrate_60_cl_updaterate_60_physics_rate_min_60.txt  RegTestDumpServer_pid_10688_tickrate_60_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpServer_pid_12536_tickrate_20_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpServer_pid_17200_tickrate_60_cl_updaterate_60_physics_rate_min_60.txt
PRooFPS-dd/OldRegTestDumps/v0.2.0.0/: RegTestDumpClient_pid_12408_tickrate_20_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpClient_pid_14828_tickrate_60_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpClient_pid_21920_tickrate_60_cl_updaterate_60_physics_rate_min_60.txt  RegTestDumpServer_pid_11160_tickrate_60_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpServer_pid_11972_tickrate_20_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpServer_pid_8724_tickrate_60_cl_updaterate_60_physics_rate_min_60.txt
PRooFPS-dd/OldRegTestDumps/v0.2.3/: RegTestDumpClient_pid_15576_tickrate_20_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpClient_pid_15884_tickrate_60_cl_updaterate_60_physics_rate_min_60.txt  RegTestDumpClient_pid_9496_tickrate_60_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpServer_pid_14104_tickrate_60_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpServer_pid_16108_tickrate_20_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpServer_pid_9712_tickrate_60_cl_updaterate_60_physics_rate_min_60.txt
PRooFPS-dd/OldRegTestDumps/v0.2.4/: RegTestDumpClient_pid_14396_tickrate_20_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpClient_pid_19120_tickrate_60_cl_updaterate_60_physics_rate_min_60.txt  RegTestDumpClient_pid_3976_tickrate_60_cl_updaterate_20_physics_rate_min_60.txt  RegTestDumpServer_pid_13316_tickrate_60_cl_updaterate_60_physics_rate_min_60.txt  RegTestDumpServer_pid_16008_tickrate_20_cl_updaterate_20_physics_rate_min_60.txt  (+1 more)
PRooFPS-dd/Tests/: CameraHandlingTest.h  EventListerPerfTest.h  EventListerTest.h  GameModeTest.h  Input.cpp  Input.h  InputSim.cpp  InputSim.h  MapItemTest.h  MapTestsCommon.h  MapcycleTest.h  MapsTest.h  PRooFPS-dd-Tests.cpp  PlayerTest.h  Process.h  RegTestBasicServerClient2Players.h  RegTestMapChangeServerClient3Players.h  _how-to-auto-test.txt  _how-to-manual-test-01-deathmatch.txt  _how-to-manual-test-02-team-deathmatch.txt  _how-to-manual-test-06-weapon-settings.txt  _how-to-manual-test-07-team-roundgame.txt
(+122 files in other folders)
